# attack-datasources

./: .gitignore  ATT&CK-Data-Sources.ipynb  pyproject.toml
docs/: attack_data_sources_objects.yaml  techniques_to_components_mapping.csv  techniques_to_components_mapping.yaml
