[tool.poetry]
name = "attack-datasources"
version = "0.1.0"
description = ""
authors = ["congdh <congdh2812@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
attackcti = "^0.3.4"
PyYAML = "^6.0"
pandas = "^1.3.4"
jupyter = "^1.0.0"
matplotlib = "^3.5.0"
plotly = "^5.4.0"
networkx = "^2.6.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
